brat/test/golden/error/apply_two_thunks.brat.golden
Error in test/golden/error/apply_two_thunks.brat@FC {start = Pos {line = 9, col = 9}, end = Pos {line = 9, col = 18}}:
go(n) = thunks(n)
        ^^^^^^^^^

  Internal error: Expected empty unders, got:
  (a1 :: Int)

